<resources>
    <string name="app_name">Renovi</string>
    <string name="title_activity_overview">OverviewActivity</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="title_activity_login">Log In</string>
    <string name="title_activity_main_test">Main</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="renoviTitle">Renovi</string>
    <string name="kaltmiete">Aktuelle Kaltmiete: %d</string>
    <string name="afterwards">Nach Sanierung:\n+%d €\t%d €</string>
    <string name="addRenterButton">Mieter hinzufügen</string>
    <string name="firstName">Vorname</string>
    <string name="lastName">Nachname</string>
    <string name="renter_id">ID</string>


    <!-- welcomescreen strings -->
    <string name="logo_char">R</string>
    <string name="logo_string">enovi</string>
    <string name="slogan_string">sehr cooler slogan</string>
    <string name="start_button_string">Get Started</string>
    <!-- welcomescreen strings -->

    <!-- login strings -->
    <string name="login_title">Melden Sie sich an</string>
    <string name="Landlordlogin_title">Melden Sie sich  als Vermieter*in an</string>
    <string name="descriptiontext_string">Den Verifizierungscode erhalten Sie vom Vermieter</string>
    <string name="landlorddescriptiontext_string">Vermieter Description Text XYZ</string>
    <string name="verify_id_placeholder_string">Verifizierungscode</string>
    <string name="landlord_password_placeholder_string">Passwort</string>
    <string name="first_name_placeholder_string">Vorname</string>
    <string name="last_name_placeholder_string">Nachname</string>
    <string name="login_button_string">Anmelden</string>
    <string name="landlord_login_button_string">Als Vermieter anmelden</string>
    <!-- login strings -->

    <!-- main strings -->
    <string name="welcome_string">Willkommen zurück,</string>
    <string name="user_name_string">Herr Mieter</string>
    <string name="menu_title_string">Menü</string>
    <string name="kosten_title_string">Kostenänderung</string>
    <string name="banner_title_string">Kaltmiete</string>
    <string name="banner_description_string">Mieterhöhung um %1$s</string>
    <string name="miete_price_string">450,00€</string>
    <string name="percentage">20%</string>
    <string name="reperatur_title">Reperaturen</string>
    <string name="reperatur_button_string">Add</string>
    <string name="verbrauchssenkung_title">Verbrauchssenkung</string>
    <string name="co2_title">CO2-Reduzierung:</string>
    <string name="co2_percantage">90% ⬆</string>
    <string name="co2_progressbar_title">Klimapositive Folgen</string>
    <string name="bevorstehende_renovierungen_title">Bevorstehende Renovierungen</string>
    <string name="tuer_renovierung_button_title">Türsicherheit</string>
    <string name="tuer_renovierung_button_description">Kosten: 50€</string>
    <string name="fenster_renovierung_button_title">Fenster Wärmedämmung</string>
    <string name="fenster_renovierung_button_description">Kosten: 30€</string>
    <string name="badsanierung_renovierung_button_title">Badsanierung</string>
    <string name="badsanierung_renovierung_button_description">Kosten: 100€</string>
    <!-- main strings -->

    <!-- inbox strings -->
    <string name="details_title">Haustür</string>
    <string name="details_price_string">Kosten:</string>
    <string name="details_price_double">50€</string>
    <string name="pros_title">Vorteile</string>
    <string name="description_title">Begründung</string>
    <string name="description_string">§ 555b Nr. 1:\n\"durch die in Bezug auf die Mietsache Endenergie nachhaltig eingespart wird (energetische Modernisierung)\"&#160;<a href="https://www.gesetze-im-internet.de/bgb/__555b.html">Read More...</a></string>
    <string name="redirect_title">Weitere Renovierungen</string>
    <string name="object_count_string">6 Objekte</string>
    <string name="details_button_string">Reperatur vermerken</string>
    <!-- inbox strings -->

    <!-- inbox strings -->
    <string name="inbox_title">Postfach</string>
    <string name="chat_title">Chat</string>
    <string name="no_chat_placeholder_message">Der Chat ist leer</string>
    <string name="back_button_string">&lt;</string>
    <string name="more_button_string">&#8226;&#8226;</string>
    <!-- inbox strings -->

    <!-- profile strings -->
    <string name="profile_title">Profil</string>
    <string name="app_information_string">Renovi\n\v 1.2.18 - Build 1</string> <!-- version.sprint.deployment-Nr.-->
    <string name="role_string">Mieter</string>
    <string name="account_setting_banner_title">Account</string>
    <string name="notification_setting_banner_title">Benachrichtigung</string>
    <string name="other_setting_banner_title">Anderes</string>
    <string name="logout_button_title">Abmelden</string>
    <string name="personal_data_button_title">Persönliche Daten</string>
    <string name="notification_button_title">Pop-up Nachrichten</string>
    <string name="contact_us_button_title">Kontakt</string>
    <string name="privacy_policy_button_title">Privacy Policy</string>
    <string name="settings_button_title">Einstellungen</string>
    <!-- profile strings -->

    <!-- button strings -->
    <string name="no_renter_placeholder_message">Keine Mieter gefunden</string>
    <string name="no_renovations_placeholder_message">Keine bevorstehenden Renovierungen</string>
    <string name="fenster_button_title">Fenster</string>
    <string name="tuer_button_title">Tür</string>
    <string name="wc_button_title">WC</string>
    <string name="dach_button_title">Dach</string>
    <!-- button strings -->

    <!-- renterList strings -->
    <string name="title_activity_renter_list">Alle Mieter</string>
    <string name="renterList_title">Mieter</string>
    <string name="search_renter_placeholder_string">Suche Mieter ...</string>
    <string name="search_renovation_placeholder_string">Suche Modernisierung ...</string>
    <string name="no_renter_found_string">jyhfg</string>
    <string name="large_text">dasdafwdfaf</string>
    <!-- renterList strings -->

    <!-- renovationsList strings -->
    <string name="renovationsList_title">Modernisierungen</string>
    <!-- renterList strings -->

    <!-- create renovation strings -->
    <string name="create_renovation_title">Modernisierung</string>
    <string name="selection_view_benefits_title">Vorteile auswählen</string>
    <string name="selection_view_states_title">Zustand auswählen</string>
    <string name="selection_view_renovations_title">Modernisierung auswählen</string>
    <string name="selection_view_renter_title">Mieter auswählen</string>
    <string name="selection_view_deselect">ALLE ABWÄHLEN</string>
    <string name="selection_view_select_all">ALLE WÄHLEN</string>
    <string name="selection_view_accept">FERTIG</string>
    <string name="create_renovation_amount_placeholder2">Kosten</string>
    <string name="create_renovation_amount_placeholder">davon umlagefähige Kosten</string>
    <string name="create_renovation_timestamp_placeholder">Datum</string>
    <string name="create_renovation_paragraph_placeholder">Begründung (§)</string>
    <string name="create_renovation_benefits_placeholder">Vorteile</string>
    <string name="create_renovation_state_placeholder">Zustand</string>
    <string name="create_renovation_object_placeholder">Objekt</string>
    <string name="create_renovation_renter_placeholder">Mieter</string>
    <string name="create_renovation_button_string">Erstellen</string>
    <!-- create renovation strings -->

    <!-- create renter strings -->
    <string name="create_renter_title">Mieter</string>
    <string name="selection_view_address_title">Adresse auswählen</string>
    <string name="create_renter_rent_placeholder">Miete</string>
    <string name="create_renter_address_placeholder">Adresse</string>
    <string name="create_renter_button_string">Hinzufügen</string>
    <string name="create_renter_squaremeters_placeholder">Größe in Quadratmetern</string>

    <!-- create renter strings -->

    <!-- create refurbishment strings -->
    <string name="create_refurbishment_title">Neue Fenster</string>
    <string name="create_refurbishment_button_string">Weiter</string>
    <string name="selection_view_refurbishment_title">Addresse auswählen</string>
    <string name="neue_nachricht">Neue Nachricht</string>
    <!-- create refurbishment strings -->

    <!-- privacy policy strings -->
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="privacy_policy_text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</string>
    <string name="sprache_ausw_hlen">Sprache auswählen</string>
    <string name="app_sprache">Sprache</string>

    <string name="email">E-Mail</string>
    <string name="changeEmail">E-Mail ändern</string>
    <string name="invalidEmail">Bitte eine valide E-Mail eingeben</string>
    <string name="validEmail">E-Mail erfolgreich geändert</string>
</resources>