<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<TextView
		android:id="@+id/logochar"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text="@string/logo_char"
		android:textColor="@color/purple_200"
		android:textSize="50sp"
		android:textStyle="bold"
		app:layout_constraintBottom_toTopOf="@+id/slogan"
		app:layout_constraintEnd_toStartOf="@+id/logotext"
		app:layout_constraintHorizontal_bias="1.0"
		app:layout_constraintStart_toStartOf="parent" />

	<TextView
		android:id="@+id/logotext"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text="@string/logo_string"
		android:textColor="@color/black1"
		android:textSize="50sp"
		android:textStyle="bold"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.55"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/slogan"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/slogan_string"
		android:textColor="@color/gray1"
		android:textSize="18sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/logotext" />

	<Button
		android:id="@+id/startButton"
		android:layout_width="315dp"
		android:layout_height="65dp"
		android:layout_marginBottom="32dp"
		android:background="@drawable/bg_button"
		android:text="@string/start_button_string"
		android:textColor="@color/white"
		android:textSize="16sp"
		android:textStyle="bold"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>