<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<ImageView
		android:id="@+id/bgIllustration"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="50dp"
		android:src="@drawable/bg_illustration"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<ImageView
		android:id="@+id/signinIllustration"
		android:layout_width="250dp"
		android:layout_height="250dp"
		android:src="@drawable/il_signin"
		app:layout_constraintBottom_toTopOf="@+id/signinTitle"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.52" />

	<TextView
		android:id="@+id/signinTitle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="35dp"
		android:text="@string/login_title"
		android:textColor="@color/black1"
		android:textSize="20sp"
		android:textStyle="bold"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/bgIllustration" />

	<TextView
		android:id="@+id/descriptiontext"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/descriptiontext_string"
		android:textColor="@color/gray1"
		android:textSize="12sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/signinTitle" />

	<EditText
		android:id="@+id/verifyIdInput"
		android:layout_width="315dp"
		android:layout_height="48dp"
		android:layout_marginTop="15dp"
		android:background="@drawable/bg_gray_round_corner"
		android:drawableStart="@drawable/ic_lock"
		android:drawableTint="@color/gray2"
		android:drawablePadding="12dp"
		android:hint="@string/verify_id_placeholder_string"
		android:inputType="textVisiblePassword"
		android:paddingLeft="10dp"
		android:textColorHint="@color/gray2"
		android:textSize="16dp"
		android:textCursorDrawable="@drawable/bg_cursor"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/descriptiontext" />

	<EditText
		android:id="@+id/firstNameInput"
		android:layout_width="315dp"
		android:layout_height="48dp"
		android:layout_marginTop="15dp"
		android:background="@drawable/bg_gray_round_corner"
		android:drawableStart="@drawable/ic_person"
		android:drawablePadding="12dp"
		android:hint="@string/first_name_placeholder_string"
		android:inputType="textVisiblePassword"
		android:paddingLeft="10dp"
		android:textColorHint="@color/gray2"
		android:textSize="16dp"
		android:textCursorDrawable="@drawable/bg_cursor"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/verifyIdInput" />

	<EditText
		android:id="@+id/lastNameInput"
		android:layout_width="315dp"
		android:layout_height="48dp"
		android:layout_marginTop="15dp"
		android:background="@drawable/bg_gray_round_corner"
		android:drawableStart="@drawable/ic_person"
		android:drawablePadding="12dp"
		android:hint="@string/last_name_placeholder_string"
		android:inputType="textVisiblePassword"
		android:paddingLeft="10dp"
		android:textColorHint="@color/gray2"
		android:textSize="16dp"
		android:textCursorDrawable="@drawable/bg_cursor"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/firstNameInput" />

	<Button
		android:id="@+id/signinButton"
		android:layout_width="315dp"
		android:layout_height="65dp"
		android:layout_marginBottom="32dp"
		android:background="@drawable/bg_button"
		android:text="@string/login_button_string"
		android:textColor="@color/white"
		android:textSize="16sp"
		android:textStyle="bold"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>