<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white1">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.CreateRenovationActivity">

        <ImageView
            android:id="@+id/titleBackground"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@color/white1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/personalDataTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="41dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/create_refurbishment_title"
            android:textAlignment="center"
            android:textColor="@color/black1"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/refurbishmentBackButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="34dp"
            android:background="@drawable/bg_white_round_corner"
            android:backgroundTint="@color/gray5"
            android:drawableStart="@drawable/ic_arrow_left"
            android:drawableTint="@color/black1"
            android:padding="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/personalDataConstraintLayout"
            android:layout_width="331dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleBackground"
            tools:context=".view.CreateRefurbishmentActivity">

            <EditText
                android:id="@+id/refurbCostInput"
                android:layout_width="155dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_white_round_corner"
                android:drawableStart="@drawable/ic_euro"
                android:drawablePadding="12dp"
                android:drawableTint="@color/gray2"
                android:elevation="5dp"
                android:hint="@string/create_renovation_amount_placeholder2"
                android:inputType="numberDecimal"
                android:paddingLeft="10dp"
                android:textColorHint="@color/gray2"
                android:textCursorDrawable="@drawable/bg_cursor"
                android:textSize="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/dateInput"
                android:layout_width="155dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_white_round_corner"
                android:drawableStart="@drawable/ic_calendar"
                android:drawablePadding="12dp"
                android:drawableTint="@color/gray2"
                android:elevation="5dp"
                android:focusable="false"
                android:hint="@string/create_renovation_timestamp_placeholder"
                android:inputType="none"
                android:paddingLeft="10dp"
                android:textColorHint="@color/gray2"
                android:textCursorDrawable="@drawable/bg_cursor"
                android:textSize="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/create_refurbishment_address"
            android:layout_width="315dp"
            android:layout_height="48dp"
            android:layout_marginTop="64dp"
            android:background="@drawable/bg_white_round_corner"
            android:drawableEnd="@drawable/ic_arrow_down"
            android:drawablePadding="12dp"
            android:drawableTint="@color/gray2"
            android:elevation="5dp"
            android:gravity="center_vertical"
            android:hint="@string/create_renovation_object_placeholder"
            android:paddingLeft="12dp"
            android:paddingEnd="10dp"
            android:textColorHint="@color/gray2"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personalDataConstraintLayout" />

        <Button
            android:id="@+id/create_refurbishment_Button"
            android:layout_width="315dp"
            android:layout_height="65dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/bg_button"
            android:text="@string/create_refurbishment_button_string"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personalDataConstraintLayout"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/refurbApportionableCostInput"
            android:layout_width="315dp"
            android:layout_height="48dp"
            android:background="@drawable/bg_white_round_corner"
            android:drawableStart="@drawable/ic_euro"
            android:drawablePadding="12dp"
            android:drawableTint="@color/gray2"
            android:elevation="5dp"
            android:hint="@string/create_renovation_amount_placeholder"
            android:inputType="numberDecimal"
            android:paddingLeft="10dp"
            android:textColorHint="@color/gray2"
            android:textCursorDrawable="@drawable/bg_cursor"
            android:textSize="16dp"
            app:layout_constraintBottom_toTopOf="@+id/create_refurbishment_address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personalDataConstraintLayout"
            app:layout_constraintVertical_bias="0.346" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>